<resources>
    <string name="app_name">Health QR App</string>
    <string name="img_desc">img desc</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="it_only_takes_a_minute_to_start_taking_your_first_order">It only takes a minute to start booking your vaccine.</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="back">Back</string>
    <string name="password">PASSWORD</string>
    <string name="full_name">FULL NAME</string>
    <string name="_91">+91</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="email_address">EMAIL</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="dashbord">DASHBOARD</string>
    <string name="welcome_back_let_s_book_your_vaccin_the_right_way">Welcome back! Let’s book your vaccine the right way.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_here">New here?</string>
    <string name="cnf_password">CONFIRM PASSWORD</string>
    <string name="eportal_hub_s_online_purchase">ePortal Hub\'s Online Purchase</string>
    <string name="purchase_online_now">PURCHASE ONLINE NOW</string>
    <string name="life_health_insurance_policy_delivered_fast_at_your_door_step">Life/Health insurance policy delivered fast at your door step!</string>
    <string name="life_health_and_other_policies">Life Health and Other Policies</string>
    <string name="life_individual">Life-Individual</string>
    <string name="size">Size:</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="to_reset_your_password_enter_the_email_address_you_use_to_sign_in_to_app">To reset your password, Enter the email address you use to sign in to App.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="unit_size">Unit Price :</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="minus">-</string>
    <string name="total">Total:</string>
    <string name="total_without_colon">Total</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="cart_0_items">Cart(0 Items)</string>
    <string name="order_summery">Order Summery</string>
    <string name="amount">Amount</string>
    <string name="tax_5">Tax(5%)</string>
    <string name="checkout">Checkout</string>
    <string name="home">Home</string>
    <string name="privacy">Privacy</string>
    <string name="contact">Contact</string>
    <string name="signup">SignUp</string>
    <string name="login_small">Login</string>
    <string name="locality">Locality</string>
    <string name="zipcode">ZipCode</string>
    <string name="city">City</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="proceed">Proceed</string>
    <string name="skip_login">Skip Login</string>
    <string name="details">Details</string>
    <string name="order_id">Order Id</string>
    <string name="createdate">CreateDate</string>
    <string name="item_details">Item Details</string>
    <string name="description">Description</string>
    <string name="unitprice">UnitPrice</string>
    <string name="quntity">Quntity</string>
    <string name="myOrder">My Orders</string>
    <string name="id">Id</string>
    <string name="paymentid">PaymentId</string>
    <string name="street">Street</string>
    <string name="transactionid">TransactionId</string>
    <string name="grandTotal">GrandTotal</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="go_to_order_details">Go To Order Details</string>
    <string name="receipt">Receipt</string>
    <string name="select_login_type">Select Login Type</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="go_back">Go back</string>
    <string name="my_order">My Orders</string>
    <string name="signUp">Sign Up</string>
    <string name="send_otp">SEND OTP</string>
    <string name="item">Items</string>
    <string name="name">Name</string>
    <string name="imageUrl">ImageUrl</string>
    <string name="itemList">Item List</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_item">Edit</string>
    <string name="category">Category</string>
    <string name="itemType">Item Type</string>
    <string name="unitPrice">Unit Price</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="choose_file">Choose File</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string-array name="category">
        <item>Life Insurance</item>
        <item>Health Insurance</item>
        <item>Other</item>
    </string-array>

    <string-array name="itemType">
        <item>Individual</item>
        <item>Family Floater</item>
        <item>Group</item>
    </string-array>
</resources>