<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp">
    <LinearLayout
        android:id="@+id/ll_RootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_ID"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:layout_weight="1"
            android:paddingEnd="@dimen/_6sdp"
            android:paddingRight="@dimen/_6sdp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tv_paymentId"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:text="@string/paymentid"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:paddingRight="@dimen/_6sdp"
            tools:ignore="RtlSymmetry"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:paddingStart="@dimen/_4sdp"
            android:paddingLeft="@dimen/_4sdp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tv_zipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zipcode"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_City"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_createDate"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:text="@string/createdate"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locality"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/divider_color"/>

</LinearLayout>
</layout>