<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/dashbord_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myOrder"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:paddingTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        tools:ignore="RtlSymmetry" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/divider_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="8">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paymentid"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="end"
                android:paddingStart="@dimen/_4sdp"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="@dimen/_4sdp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_14sdp"
                tools:ignore="RtlSymmetry" />
               <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zipcode"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:paddingStart="@dimen/_6sdp"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/_6sdp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createdate"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locality"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonenumber"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_weight="1"
                tools:ignore="RtlSymmetry" />
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_color"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_myOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"/>
</LinearLayout>
</layout>
