<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/purple_700"
        android:paddingStart="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_20sdp"
        tools:ignore="RtlSymmetry">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eportal_hub_s_online_purchase"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/life_health_insurance_policy_delivered_fast_at_your_door_step"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_online_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/dark_green"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/life_health_and_other_policies"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:paddingStart="@dimen/_25sdp"
        android:paddingLeft="@dimen/_25sdp"
        android:paddingTop="@dimen/_12sdp"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_detailsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:paddingStart="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_15sdp"
        tools:ignore="RtlSymmetry"/>

</LinearLayout>
</layout>