<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/dashbord_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:paddingTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        tools:ignore="RtlSymmetry">
    <TextView
        android:id="@+id/tv_order_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_orderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="order_l00uiedsdjshdjs"
        android:paddingStart="@dimen/_44sdp"
        android:paddingLeft="@dimen/_44sdp"
        android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_8sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        tools:ignore="RtlSymmetry">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createdate"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_createDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="21-09-2021 11:09:26"
        android:paddingStart="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_8sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        tools:ignore="RtlSymmetry">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1050.00"
            android:paddingStart="@dimen/_55sdp"
            android:paddingLeft="@dimen/_55sdp" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:overScrollMode="never"
        tools:ignore="RtlSymmetry">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/_10sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_12sdp"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_90sdp"
                android:paddingLeft="@dimen/_90sdp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_12sdp"
                android:paddingLeft="@dimen/_12sdp"
                android:text="@string/unitprice"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_10sdp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quntity"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_10sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingLeft="@dimen/_15sdp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_without_colon"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_10sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingLeft="@dimen/_15sdp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/divider_color" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"/>
    </LinearLayout>
    </HorizontalScrollView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeColor="@color/lightBlue"
        app:strokeWidth="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_5sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_6sdp"
            android:textColor="@color/lightBlue"/>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
</layout>
