<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@color/white"
    app:strokeWidth="@dimen/_2sdp"
    app:cardCornerRadius="@dimen/_2sdp"
    android:elevation="@dimen/_15sdp"
    tools:targetApi="lollipop">
    <RelativeLayout
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_5sdp"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_20sdp">
        <TextView
            android:id="@+id/tv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            tools:ignore="RtlSymmetry"/>
        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:visibility="invisible"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:visibility="invisible"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingTop="@dimen/_15sdp">
    <TextView
        android:id="@+id/tv_item_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/item_count_textview_background"
        android:text="0"
        android:textSize="@dimen/_4sdp"
        android:textColor="@color/white"
        android:layout_marginBottom="-4dp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_4sdp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="RelativeOverlap">
        <ImageView
            android:id="@+id/iv_shopping_cart"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_shopping_cart"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_desc"/>
        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_small"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</com.google.android.material.card.MaterialCardView>
</layout>