<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/dashbord_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:paddingTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        tools:ignore="RtlSymmetry" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:padding="@dimen/_5sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionid"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grandTotal"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/_5sdp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/_5sdp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/_5sdp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_5sdp"
        android:paddingStart="@dimen/_30sdp"
        tools:ignore="RtlSymmetry,UselessParent"
        android:paddingLeft="@dimen/_30sdp">

        <TextView
            android:id="@+id/tv_transaction_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_grand_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:layout_weight="1"/>

    </LinearLayout>

    </LinearLayout>
   <Button
       android:id="@+id/btn_order_detail"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/go_to_order_details"
       android:textSize="@dimen/_10sdp"
       android:textColor="@color/white"
       android:backgroundTint="@color/dark_green"
       tools:targetApi="lollipop"
       android:layout_marginTop="@dimen/_5sdp"
       android:layout_marginStart="@dimen/_5sdp"
       android:layout_marginLeft="@dimen/_5sdp"
       tools:ignore="RtlSymmetry" />
</LinearLayout>
</layout>